@@ -9,6 +9,7 @@
   better rsmb compatibility.
 - Bridge clean_session setting is now false, to give more sensible behaviour
   and be more compatible with rsmb.
+- Add cleansession variable for configuring bridges.
 
 0.7 - 20100615
 ==============
